1.0.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.cosine_bell.validate.Validate.rst.txt
polaris.tasks.ocean.cosine\_bell.validate.Validate
==================================================

.. currentmodule:: polaris.tasks.ocean.cosine_bell.validate

.. autoclass:: Validate

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Validate.__init__
      ~Validate.add_dependency
      ~Validate.add_horiz_mesh_input_file
      ~Validate.add_init_input_file
      ~Validate.add_input_file
      ~Validate.add_output_file
      ~Validate.add_output_files_for_ocean_model_input
      ~Validate.add_vert_coord_input_file
      ~Validate.check_properties
      ~Validate.constrain_resources
      ~Validate.get_horiz_mesh_filename
      ~Validate.get_init_filename
      ~Validate.get_vert_coord_filename
      ~Validate.map_from_native_model_vars
      ~Validate.map_to_native_model_vars
      ~Validate.open_model_dataset
      ~Validate.open_vert_coord_dataset
      ~Validate.process_inputs_and_outputs
      ~Validate.run
      ~Validate.runtime_setup
      ~Validate.set_resources
      ~Validate.set_shared_config
      ~Validate.setup
      ~Validate.validate_baselines
      ~Validate.write_horiz_mesh_dataset
      ~Validate.write_initial_state_dataset
      ~Validate.write_model_dataset
      ~Validate.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Validate.component
      ~Validate.config
      ~Validate.input_data
   
   